# smart-todo-app

./: LICENSE  README.md  pyproject.toml  tasks.json
data/: tasks.json
src/: main.py  storage.py
src/cli/: interface.py
src/models/: task.py  todo_list.py
src/parsers/: date_parser.py  regex_patterns.py  task_parser.py  test_parser_run.py  test_search_filter_run.py  test_validation_run.py  validator.py
tests/: test_date_parser.py  test_regex_patterns.py  test_task_parser.py
