[project]
name = "smart-todo-app"
version = "0.1.0"
description = "a command line todo application with advanced features powered by regex for intelligent parsing and task management."
authors = [
    {name = "Martins Adelegbe"}
]
packages = [
    { include = "src" }
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
